rgw: fix for bucket delete racing with mdlog sync

Fixes: http://tracker.ceph.com/issues/17698

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit e9cf41f9bfd1aa7d35f945f6a3ee6bb66c135bad)